Bug 2166, split external source and binary into individual components.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3833 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -1,6 +1,4 @@
 
-VERSION=0.4-1
-
 include Makefile.inc
 
 SYSTEMS=persistence/db \
@@ -22,69 +20,30 @@ SYSTEMS=persistence/db \
         pychecker \
         yapps
 
-SOURCES=persistence/db/db-4.2.52.tar.gz \
-        python/Python-2.3.3.tgz \
-        python/bzip2-1.0.2.tar.gz \
-        python/zlib-1.2.1.tar.gz \
-        swig/SWIG-20Feb04.tar.gz \
-        epydoc/epydoc-2.1.tar.gz \
-        PyLucene/PyLucene-0.6.2.tar.gz \
-        persistence/xerces-c/xerces-c-src2_4_0.tar.gz \
-        persistence/pathan/libpathan-1.2-2-src.tar.gz \
-        persistence/dbxml/dbxml-1.2.1.tar.gz \
-        persistence/libxml2/libxml2-2.6.10.tar.gz \
-        persistence/libxslt/libxslt-1.1.2.tar.gz \
-        openssl/openssl-0.9.7d.tar.gz \
-        egenix-mx/egenix-mx-base-2.1.0.tar.gz \
-        jabber-py/jabberpy0.4-0.tar.gz \
-        SOAPpy/SOAPpy-0.10.2.tar.gz \
-        zope/ZopeInterface-3.0.0b1.tgz \
-        twisted/Twisted-r11303.tar.gz \
-        pychecker/pychecker-0.8.13.tar.gz \
-        yapps/yapps2.1.1.zip
-
 .PHONY: sources expand binaries $(SYSTEMS)
 
-sources:
-	tar -cvf sources-$(VERSION).tar $(SOURCES)
-	$(MD5) sources-$(VERSION).tar > sources-$(VERSION).tar.md5
+sources: env
+	for system in $(SYSTEMS); \
+	do \
+	    $(MAKE) -C $$system sources; \
+	done
 
-sources-$(VERSION).tar:
-	$(CURL) http://builds.o11n.org/external/sources-$(VERSION).tar
-	$(CURL) http://builds.o11n.org/external/sources-$(VERSION).tar.md5
-#	$(MD5CHECK) sources-$(VERSION).tar.md5
-
-sources-$(VERSION)-expanded: sources-$(VERSION).tar
-	tar xvf sources-$(VERSION).tar
+expand: env
 	for system in $(SYSTEMS); \
 	do \
 	    $(MAKE) -C $$system expand; \
 	done
-	touch sources-$(VERSION)-expanded
 
-expand: env sources-$(VERSION)-expanded
-
-binaries:
-	rm -f $(SNAP)-$(VERSION).tar $(SNAP)-$(VERSION).tar.gz
+binaries: env
 	@for system in $(SYSTEMS); \
 	do \
 	    $(MAKE) -C $$system DEBUG=$(DEBUG) snap; \
 	done
-	@for system in $(SYSTEMS); \
-	do \
-            echo appending $$system; \
-            cp $$system/$(SNAP).tar.gz _tmp.tar.gz; \
-            gunzip -f _tmp.tar.gz; \
-            tar -Af $(SNAP)-$(VERSION).tar _tmp.tar; \
-            rm _tmp.tar; \
-	done
-	gzip $(SNAP)-$(VERSION).tar
-	$(MD5) $(SNAP)-$(VERSION).tar.gz > $(SNAP)-$(VERSION).tar.gz.md5
 
 $(SYSTEMS):
 	$(MAKE) -C $@ DEBUG=$(DEBUG)
 
-all: env sources-$(VERSION)-expanded $(SYSTEMS)
+all: env sources $(SYSTEMS)
 
 world: all binaries install
 	make -C ../internal DEBUG=$(DEBUG) all binaries install
@@ -96,21 +55,24 @@ clean: env
 	done
 
 realclean:
-	rm -rf release debug \
-		release-*.tar.gz debug-*.tar.gz \
-		sources-*.tar* sources-*-expanded
+	rm -rf release debug
 	@for system in $(SYSTEMS); \
 	do \
 	    echo making _realclean in $$system; \
 	    $(MAKE) -C $$system -k _realclean; \
 	done
 
-upload:	$(SNAP)-$(VERSION).tar.gz
-	scp $(SNAP)-$(VERSION).tar.gz $(UPLOAD)
-	scp $(SNAP)-$(VERSION).tar.gz.md5 $(UPLOAD)
+upload:
+	@for system in $(SYSTEMS); \
+	do \
+		$(MAKE) -C $$system DEBUG=$(DEBUG) upload; \
+	done
 
-install: $(SNAP)-$(VERSION).tar.gz
-	tar -C $(CHANDLERBIN) -xvzf $(SNAP)-$(VERSION).tar.gz
+install:
+	@for system in $(SYSTEMS); \
+	do \
+		$(MAKE) -C $$system DEBUG=$(DEBUG) install; \
+	done
 
 checkout:
 	cd ..; \
