--- a/external/SOAPpy/Makefile
+++ b/external/SOAPpy/Makefile
@@ -1,5 +1,6 @@
 
 VERSION=0.10.2
+RELVER=$(VERSION)-1
 SOAPPY=$(BUILD_ROOT)/SOAPpy
 SRC=$(SOAPPY)/SOAPpy-$(VERSION)
 
@@ -11,18 +12,35 @@ BUILD=build_$(SNAP)
 apply: patches
 	patch -Nup0 < patches; echo ok
 
-build: apply
+build: expand apply
 	cd $(SRC); \
 	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
 
-expand: SOAPpy-$(VERSION).tar.gz
+SOAPpy-$(VERSION).tar.gz:
+	$(CURL) http://builds.osafoundation.org/external/SOAPpy-$(VERSION).tar.gz
+	$(CURL) http://builds.osafoundation.org/external/SOAPpy-$(VERSION).tar.gz.md5
+
+sources: SOAPpy-$(VERSION).tar.gz
+
+SOAPpy-$(VERSION)-expanded: SOAPpy-$(VERSION).tar.gz
 	tar xvzf SOAPpy-$(VERSION).tar.gz
+	touch SOAPpy-$(VERSION)-expanded
+
+expand: SOAPpy-$(VERSION)-expanded
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(SOAPPY)/$(SNAP).tar.gz \
-                  $(SNAP)/$(SITE)/SOAPpy
+        tar -cvzf $(SOAPPY)/soappy-$(SNAP)-$(RELVER).tar.gz \
+                  $(SNAP)/$(SITE)/SOAPpy; \
+	$(MD5) $(SOAPPY)/soappy-$(SNAP)-$(RELVER).tar.gz > $(SOAPPY)/soappy-$(SNAP)-$(RELVER).tar.gz.md5
+
+install: soappy-$(SNAP)-$(RELVER).tar.gz
+	tar -C $(CHANDLERBIN) -xvzf soappy-$(SNAP)-$(RELVER).tar.gz
 
 clean:
 	rm -rf $(SRC)/$(BUILD)
+
+upload: soappy-$(SNAP)-$(RELVER).tar.gz
+	scp soappy-$(SNAP)-$(RELVER).tar.gz $(UPLOAD)
+	scp soappy-$(SNAP)-$(RELVER).tar.gz.md5 $(UPLOAD)
