--- a/external/jabber-py/Makefile
+++ b/external/jabber-py/Makefile
@@ -1,5 +1,6 @@
 
 VERSION=0.4-0
+RELVER=$(VERSION)-1
 JABBERPY=$(BUILD_ROOT)/jabber-py
 SRC=$(JABBERPY)/jabberpy$(VERSION)
 
@@ -11,19 +12,36 @@ BUILD=build_$(SNAP)
 apply: patches
 	patch -Nup0 < patches; echo ok
 
-build: apply
+build: expand apply
 	cd $(SRC); \
 	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
 
-expand: jabberpy$(VERSION).tar.gz
+jabberpy$(VERSION).tar.gz:
+	$(CURL) http://builds.o11n.org/external/jabberpy$(VERSION).tar.gz
+	$(CURL) http://builds.o11n.org/external/jabberpy$(VERSION).tar.gz.md5
+
+sources: jabberpy$(VERSION).tar.gz
+
+jabberpy$(VERSION)-expanded: jabberpy$(VERSION).tar.gz
 	tar xvzf jabberpy$(VERSION).tar.gz
+	touch jabberpy$(VERSION)-expanded
+
+expand: jabberpy$(VERSION)-expanded
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(JABBERPY)/$(SNAP).tar.gz \
+        tar -cvzf $(JABBERPY)/jabberpy-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/$(SITE)/jabber.py* \
-                  $(SNAP)/$(SITE)/xmlstream.py*
+                  $(SNAP)/$(SITE)/xmlstream.py*; \
+	$(MD5) $(JABBERPY)/jabberpy-$(SNAP)-$(RELVER).tar.gz > $(JABBERPY)/jabberpy-$(SNAP)-$(RELVER).tar.gz.md5
+
+install: jabberpy-$(SNAP)-$(RELVER).tar.gz
+	tar -C $(CHANDLERBIN) -xvzf jabberpy-$(SNAP)-$(RELVER).tar.gz
+
+upload: jabberpy-$(SNAP)-$(RELVER).tar.gz
+	scp jabberpy-$(SNAP)-$(RELVER).tar.gz $(UPLOAD)
+	scp jabberpy-$(SNAP)-$(RELVER).tar.gz.md5 $(UPLOAD)
 
 clean:
 	rm -rf $(SRC)/$(BUILD)
