--- a/external/persistence/xerces-c/Makefile
+++ b/external/persistence/xerces-c/Makefile
@@ -1,5 +1,6 @@
 
 VERSION=2_4_0
+RELVER=$(VERSION)-1
 XERCESC=$(BUILD_ROOT)/persistence/xerces-c
 SRC=$(XERCESC)/xerces-c-src$(VERSION)
 
@@ -23,7 +24,7 @@ compile: sln
 	devenv.com Projects/Win32/VC7/xerces-all/xerces-all.sln \
                    /project XercesLib /build $(Snap)
 
-install:
+installext:
 	mkdir -p $(PREFIX)/include
 	(cd $(SRC)/src; \
          tar -cf - `find . \( -name '*.hpp' -o -name '*.c' \) -print`) | \
@@ -32,9 +33,9 @@ install:
         (cd $(PREFIX)/bin; tar xvf - )
 	(cd $(SRC)/Build/Win32/VC7/$(Snap); tar -cf - *.lib *.exp) | \
         (cd $(PREFIX)/lib; tar xvf - )
-        
 
-build: compile install
+
+build: expand compile installext
 
 clean:
 	cd $(SRC); \
@@ -44,7 +45,8 @@ clean:
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(XERCESC)/$(SNAP).tar.gz $(SNAP)/bin/xerces*.dll
+        tar -cvzf $(XERCESC)/xerces-c-$(SNAP)-$(RELVER).tar.gz $(SNAP)/bin/xerces*.dll; \
+	$(MD5) $(XERCESC)/xerces-c-$(SNAP)-$(RELVER).tar.gz > $(XERCESC)/xerces-c-$(SNAP)-$(RELVER).tar.gz.md5
 
 else
 
@@ -65,7 +67,7 @@ $(SRC)/$(BUILD)/src/xercesc/Makefile:
 	./runConfigure $(CONF_OS) $(CONF_DBG) -P$(PREFIX) \
                        -minmem -nsocket -tnative -rnone -C --with-pic
 
-build: $(SRC)/$(BUILD)/src/xercesc/Makefile
+build: expand $(SRC)/$(BUILD)/src/xercesc/Makefile
 	cd $(SRC)/$(BUILD)/src/xercesc; \
 	XERCESCROOT=$(SRC)/$(BUILD) $(MAKE); \
 	rm -f $(PREFIX)/lib/libxerces*; \
@@ -73,12 +75,29 @@ build: $(SRC)/$(BUILD)/src/xercesc/Makefile
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(XERCESC)/$(SNAP).tar.gz $(SNAP)/lib/libxerces*
+        tar -cvzf $(XERCESC)/xerces-c-$(SNAP)-$(RELVER).tar.gz $(SNAP)/lib/libxerces*; \
+	$(MD5) $(XERCESC)/xerces-c-$(SNAP)-$(RELVER).tar.gz > $(XERCESC)/xerces-c-$(SNAP)-$(RELVER).tar.gz.md5
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
 
 endif
 
-expand: xerces-c-src$(VERSION).tar.gz
+xerces-c-src$(VERSION).tar.gz:
+	$(CURL) http://builds.o11n.org/external/xerces-c-src$(VERSION).tar.gz
+	$(CURL) http://builds.o11n.org/external/xerces-c-src$(VERSION).tar.gz.md5
+
+sources: xerces-c-src$(VERSION).tar.gz
+
+xerces-c-src$(VERSION)-expanded: xerces-c-src$(VERSION).tar.gz
 	tar xvzf xerces-c-src$(VERSION).tar.gz
+	touch xerces-c-src$(VERSION)-expanded
+
+expand: xerces-c-src$(VERSION)-expanded
+
+upload: xerces-c-$(SNAP)-$(RELVER).tar.gz
+	scp xerces-c-$(SNAP)-$(RELVER).tar.gz $(UPLOAD)
+	scp xerces-c-$(SNAP)-$(RELVER).tar.gz.md5 $(UPLOAD)
+
+install: xerces-c-$(SNAP)-$(RELVER).tar.gz
+	tar -C $(CHANDLERBIN) -xvzf xerces-c-$(SNAP)-$(RELVER).tar.gz
