--- a/external/twisted/Makefile
+++ b/external/twisted/Makefile
@@ -1,5 +1,6 @@
 
 VERSION=r11303
+RELVER=$(VERSION)-1
 TWISTED=$(BUILD_ROOT)/twisted
 SRC=$(TWISTED)/Twisted-$(VERSION)
 
@@ -23,18 +24,36 @@ applym2:
 apply: patches-$(VERSION)
 	patch -Nup0 < patches-$(VERSION);echo ok
 
-build: apply applym2 applysmtp applyimap4
+build: expand apply applym2 applysmtp applyimap4
 	cd $(SRC); \
 	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
 
-expand: Twisted-$(VERSION).tar.gz
+Twisted-$(VERSION).tar.gz:
+	$(CURL) http://builds.o11n.org/external/Twisted-$(VERSION).tar.gz
+	$(CURL) http://builds.o11n.org/external/Twisted-$(VERSION).tar.gz.md5
+
+sources: Twisted-$(VERSION).tar.gz
+
+Twisted-$(VERSION)-expanded: Twisted-$(VERSION).tar.gz
 	tar xvzf Twisted-$(VERSION).tar.gz
+	touch Twisted-$(VERSION)-expanded
+
+expand: Twisted-$(VERSION)-expanded
 
 snap: 
 	cd $(BUILD_ROOT); \
-	tar -cvzf $(TWISTED)/$(SNAP).tar.gz $(SNAP)/$(SITE)/twisted \
-            --exclude test
+	tar -cvzf $(TWISTED)/twisted-$(SNAP)-$(RELVER).tar.gz \
+		$(SNAP)/$(SITE)/twisted \
+		--exclude test; \
+	$(MD5) $(TWISTED)/twisted-$(SNAP)-$(RELVER).tar.gz > $(TWISTED)/twisted-$(SNAP)-$(RELVER).tar.gz.md5
+
+install: twisted-$(SNAP)-$(RELVER).tar.gz
+	tar -C $(CHANDLERBIN) -xvzf twisted-$(SNAP)-$(RELVER).tar.gz
+
+upload: twisted-$(SNAP)-$(RELVER).tar.gz
+	scp twisted-$(SNAP)-$(RELVER).tar.gz $(UPLOAD)
+	scp twisted-$(SNAP)-$(RELVER).tar.gz.md5 $(UPLOAD)
 
 clean:
 	rm -rf  $(SRC)/$(BUILD)
