--- a/external/yapps/Makefile
+++ b/external/yapps/Makefile
@@ -1,5 +1,6 @@
 
 VERSION=2.1.1
+RELVER=$(VERSION)-1
 YAPPS=$(BUILD_ROOT)/yapps
 SRC=$(YAPPS)/yapps3
 
@@ -7,17 +8,35 @@ include $(BUILD_ROOT)/Makefile.inc
 
 BUILD=build_$(SNAP)
 
-build: apply
+build: expand apply
 	mkdir -p $(PREFIX)/$(SITE)/yapps; \
 	cp -p $(SRC)/yapps2.py $(SRC)/yappsrt.py $(SRC)/grammar.py $(SRC)/parsetree.py $(PREFIX)/$(SITE)/yapps
 	cp -p __init__.py $(PREFIX)/$(SITE)/yapps
 
-expand: 
+yapps$(VERSION).zip:
+	$(CURL) http://builds.o11n.org/external/yapps$(VERSION).zip
+	$(CURL) http://builds.o11n.org/external/yapps$(VERSION).zip.md5
+
+sources: yapps$(VERSION).zip
+
+yapps$(VERSION)-expanded: yapps$(VERSION).zip
 	unzip -o yapps$(VERSION).zip
+	touch yapps$(VERSION)-expanded
+
+expand: yapps$(VERSION)-expanded
 
 snap: 
 	cd $(BUILD_ROOT); \
-	tar -cvzf $(YAPPS)/$(SNAP).tar.gz $(SNAP)/$(SITE)/yapps
+	tar -cvzf $(YAPPS)/yapps-$(SNAP)-$(RELVER).tar.gz \
+		$(SNAP)/$(SITE)/yapps; \
+	$(MD5) $(YAPPS)/yapps-$(SNAP)-$(RELVER).tar.gz > $(YAPPS)/yapps-$(SNAP)-$(RELVER).tar.gz.md5
+
+install: yapps-$(SNAP)-$(RELVER).tar.gz
+	tar -C $(CHANDLERBIN) -xvzf yapps-$(SNAP)-$(RELVER).tar.gz
+
+upload: yapps-$(SNAP)-$(RELVER).tar.gz
+	scp yapps-$(SNAP)-$(RELVER).tar.gz $(UPLOAD)
+	scp yapps-$(SNAP)-$(RELVER).tar.gz.md5 $(UPLOAD)
 
 apply: 
 	patch -Nup0 < patches-$(VERSION); echo ok
