--- a/external/python/Makefile
+++ b/external/python/Makefile
@@ -1,5 +1,6 @@
 
 VERSION=2.3.3
+RELVER=$(VERSION)-1
 BZIP2VERSION=1.0.2
 ZLIBVERSION=1.2.1
 
@@ -71,13 +72,13 @@ zlib-$(ZLIBVERSION)/zlib$(SUFFIX).lib: zlib-$(ZLIBVERSION)/$(BUILD)/win32/makefi
 zlib: zlib-$(ZLIBVERSION)/zlib$(SUFFIX).lib
 
 
-build: apply compile install
+build: expand apply compile installext
 
 compile: $(SRC)/PCbuild/pcbuild.sln bzip2 zlib
 	cd $(SRC)/PCbuild; \
         devenv.com pcbuild.sln /build $(Snap)
 
-install:
+installext:
 	mkdir -p $(BINDIR)/DLLs $(BINDIR)/Include $(BINDIR)/Lib $(BINDIR)/libs
 	(cd $(SRC)/PCbuild; \
          tar cf - python$(SUFFIX).exe \
@@ -99,10 +100,33 @@ install:
 	(cd $(SRC)/Include; tar cf - *.h) | (cd $(BINDIR)/Include; tar -xvf -)
 	cp -p $(SRC)/PC/pyconfig.h $(BINDIR)/Include
 
-expand: Python-$(VERSION).tgz
+Python-$(VERSION).tgz:
+	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz
+	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz.md5
+
+bzip2-$(BZIP2VERSION).tar.gz:
+	$(CURL) http://builds.o11n.org/external/bzip2-$(BZIP2VERSION).tar.gz
+	$(CURL) http://builds.o11n.org/external/bzip2-$(BZIP2VERSION).tar.gz.md5
+
+zlib-$(ZLIBVERSION).tar.gz:
+	$(CURL) http://builds.o11n.org/external/zlib-$(ZLIBVERSION).tar.gz
+	$(CURL) http://builds.o11n.org/external/zlib-$(ZLIBVERSION).tar.gz.md5
+
+sources: Python-$(VERSION).tgz bzip2-$(BZIP2VERSION).tar.gz zlib-$(ZLIBVERSION).tar.gz
+
+Python-$(VERSION)-expanded: Python-$(VERSION).tgz
 	tar xvzf Python-$(VERSION).tgz
+	touch Python-$(VERSION)-expanded
+
+bzip2-$(BZIP2VERSION)-expanded: bzip2-$(BZIP2VERSION).tar.gz
 	tar xvzf bzip2-$(BZIP2VERSION).tar.gz
+	touch bzip2-$(BZIP2VERSION)-expanded
+
+zlib-$(ZLIBVERSION)-expanded: zlib-$(ZLIBVERSION).tar.gz
 	tar xvzf zlib-$(ZLIBVERSION).tar.gz
+	touch zlib-$(ZLIBVERSION)-expanded
+
+expand: Python-$(VERSION)-expanded bzip2-$(BZIP2VERSION)-expanded zlib-$(ZLIBVERSION)-expanded
 
 apply: patches
 	patch -Nup0 < patches; echo ok
@@ -115,11 +139,12 @@ clean:
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(PYTHON)/$(SNAP).tar.gz \
+        tar -cvzf $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/bin/python*.* $(SNAP)/bin/libs \
                   $(SNAP)/bin/DLLs $(SNAP)/bin/Include $(SNAP)/bin/Lib \
             --exclude site-packages \
-            --exclude test
+            --exclude test; \
+	$(MD5) $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz > $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz.md5
 
 else
 
@@ -130,20 +155,30 @@ $(SRC)/$(BUILD)/Makefile:
 	../configure --prefix=$(PREFIX) $(CONF_DBG) \
                      --enable-framework=$(PREFIX)/Library/Frameworks
 
-build: apply
+build: expand apply
 	cd $(SRC)/$(BUILD); \
         $(MAKE) DB=$(PREFIX)/db $(COMP_OPT) frameworkinstallframework; \
         $(MAKE) DB=$(PREFIX)/db $(COMP_OPT) frameworkinstallapps
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(PYTHON)/$(SNAP).tar.gz \
+        tar -cvzf $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/Library/Frameworks/Python.framework \
             --exclude site-packages \
-            --exclude test
+            --exclude test; \
+	$(MD5) $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz > $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz.md5
 
-expand: Python-$(VERSION).tgz
+Python-$(VERSION).tgz:
+	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz
+	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz.md5
+
+sources: Python-$(VERSION).tgz
+
+Python-$(VERSION)-expanded: Python-$(VERSION).tgz
 	tar xvzf Python-$(VERSION).tgz
+	touch Python-$(VERSION)-expanded
+
+expand: Python-$(VERSION)-expanded
 
 else
 
@@ -154,23 +189,40 @@ $(SRC)/$(BUILD)/Makefile:
 bzip2-$(BZIP2VERSION)/libbz2.a:
 	make -C bzip2-$(BZIP2VERSION) libbz2.a
 
-build: bzip2-$(BZIP2VERSION)/libbz2.a apply
+build: expand bzip2-$(BZIP2VERSION)/libbz2.a apply
 	install -D bzip2-$(BZIP2VERSION)/libbz2.a $(PREFIX)/lib/libbz2.a
 	install -D bzip2-$(BZIP2VERSION)/bzlib.h $(PREFIX)/include/bzlib.h
 	$(MAKE) -C $(SRC)/$(BUILD) DB=$(PREFIX)/db $(COMP_OPT) install
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(PYTHON)/$(SNAP).tar.gz \
+        tar -cvzf $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/bin/idle $(SNAP)/bin/python* \
                   $(SNAP)/lib/python* \
                   $(SNAP)/include/python* \
             --exclude site-packages \
-            --exclude test
+            --exclude test; \
+	$(MD5) $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz > $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz.md5
 
-expand: Python-$(VERSION).tgz
+Python-$(VERSION).tgz:
+	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz
+	$(CURL) http://builds.o11n.org/external/Python-$(VERSION).tgz.md5
+
+bzip2-$(BZIP2VERSION).tar.gz:
+	$(CURL) http://builds.o11n.org/external/bzip2-$(BZIP2VERSION).tar.gz
+	$(CURL) http://builds.o11n.org/external/bzip2-$(BZIP2VERSION).tar.gz.md5
+
+sources: Python-$(VERSION).tgz bzip2-$(BZIP2VERSION).tar.gz
+
+Python-$(VERSION)-expanded: Python-$(VERSION).tgz
 	tar xvzf Python-$(VERSION).tgz
+	touch Python-$(VERSION)-expanded
+
+bzip2-$(BZIP2VERSION)-expanded: bzip2-$(BZIP2VERSION).tar.gz
 	tar xvzf bzip2-$(BZIP2VERSION).tar.gz
+	touch bzip2-$(BZIP2VERSION)-expanded
+
+expand: Python-$(VERSION)-expanded bzip2-$(BZIP2VERSION)-expanded
 
 endif
 
@@ -181,3 +233,13 @@ clean:
 	rm -rf $(SRC)/$(BUILD)
 
 endif
+
+upload: python-$(SNAP)-$(RELVER).tar.gz
+	scp python-$(SNAP)-$(RELVER).tar.gz $(UPLOAD)
+	scp python-$(SNAP)-$(RELVER).tar.gz.md5 $(UPLOAD)
+
+install: python-$(SNAP)-$(RELVER).tar.gz
+	tar -C $(CHANDLERBIN) -xvzf python-$(SNAP)-$(RELVER).tar.gz
+
+_realclean::
+	rm -fr zlib-* bzip2-*
