PyLucene upgraded to version 0.8.2 in external
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3876 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -46,7 +46,7 @@ $(SYSTEMS):
 all: env sources $(SYSTEMS)
 
 world: all binaries install
-	make -C ../internal DEBUG=$(DEBUG) all binaries install
+	make -C ../internal DEBUG=$(DEBUG) world
 
 clean: env
 	@for system in $(SYSTEMS); \
